test(book): add unit tests for soft delete and availability logic